--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-status-bar": "^1.4.4",
     "expo-updates": "^0.16.4",
     "moment": "^2.29.4",
+    "openai": "^3.3.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-alert-notification": "^0.3.4",
@@ -37,6 +38,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-reanimated-carousel": "^3.4.0",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1"
