--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-alert-notification": "^0.3.4",
+    "react-native-circular-progress": "^1.3.9",
     "react-native-datepicker-expo": "^1.7.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
@@ -38,6 +39,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-reanimated-carousel": "^3.4.0",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "^13.9.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.1",
