--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-location": "^15.1.1",
     "expo-status-bar": "^1.4.4",
     "expo-updates": "^0.16.4",
@@ -39,8 +40,9 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-reanimated-carousel": "^3.4.0",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.4.0",
     "react-native-url-polyfill": "^1.3.0",
+    "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1"
