--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "react-native-datepicker-expo": "^1.7.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.8.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-reanimated-carousel": "^3.4.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
@@ -45,7 +45,8 @@
     "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.1",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
