--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
+    "expo-av": "~13.2.1",
     "expo-font": "^11.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-location": "^15.1.1",
+    "expo-speech": "~11.1.1",
     "expo-status-bar": "^1.4.4",
     "expo-updates": "^0.16.4",
+    "firebase": "^10.0.0",
     "moment": "^2.29.4",
     "openai": "^3.3.0",
     "react": "18.2.0",
