--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/slider": "^4.4.2",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -19,9 +20,13 @@
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~13.2.1",
+    "expo-barcode-scanner": "^12.3.2",
     "expo-font": "^11.1.1",
+    "expo-image-picker": "^14.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-location": "^15.1.1",
+    "expo-permissions": "^14.1.1",
+    "expo-secure-store": "^12.1.1",
     "expo-speech": "~11.1.1",
     "expo-status-bar": "^1.4.4",
     "expo-updates": "^0.16.4",
@@ -39,6 +44,7 @@
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.8.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-reanimated-carousel": "^3.4.0",
