--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/slider": "^4.4.2",
@@ -49,12 +50,14 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-reanimated-carousel": "^3.4.0",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.4.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
+    "rn-sliding-up-panel": "^2.4.6",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
